# slackGPT

./: README.md  pyproject.toml  requirements.txt  slackgpt.py  summarize_slack_messages.py
.github/workflows/: main.yml
