[tool.poetry]
name = "slackgpt-messages-summary"
version = "0.1.0"
description = ""
authors = ["DidierRLopes <dro.lopes@campus.fct.unl.pt>"]
readme = "README.md"
packages = [{include = "slackgpt_messages_summary"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
openai = "^1.3.3"
slack-sdk = "^3.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
